# idf-extra-components

./: .idf_build_apps.toml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: upload_component.yml
esp_ctf/: CMakeLists.txt  idf_component.yml
esp_ctf/example/: CMakeLists.txt  README.md  sdkconfig.defaults
esp_ctf/example/main/: CMakeLists.txt  app_main.c  idf_component.yml
esp_ctf/include/: ctf_map.h  esp_trace_ctf.h  esp_trace_freertos_impl.h
esp_ctf/src/: adapter_encoder_ctf.c
esp_ctf/tools/: uart_data_capture.py
esp_ctf/tsdl/: metadata
esp_gcov/: Kconfig  gcov_rtio.c  idf_component.yml
